--- a/krita_plugin/paper.desktop
+++ b/krita_plugin/paper.desktop
@@ -3,6 +3,5 @@ Type=Service
 ServiceTypes=Krita/PythonPlugin
 X-KDE-Library=paper
 X-Python-2-Compatible=false
-X-Krita-Manual=paperPluginManual.html
 Name=Paper
-Comment=Realistic paper plugin.
+Comment=Sponsored by The Paper Foundation.
